# solana-project-template

programs/mpl-project-name/: Cargo.toml
programs/mpl-project-name/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
programs/mpl-project-name/tests/: create.rs
