[package]
name = "mpl-project-name"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[dependencies]
borsh = "0.9.3"
bytemuck = "1.14.0"
num-derive = "0.3.3"
num-traits = "~0.2"
shank = "0.2.1"
solana-program = "~1.16.14"
thiserror = "~1.0"


[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~1.16.14"
solana-sdk = "~1.16.14"

[lib]
crate-type = ["cdylib", "lib"]
